testData/fixtures/pitfalls/suspiciousBinaryOperations/suspicious-binary-operations.array-concatenation.php
<?php

return [
    '...' <error descr="Operation on an array doesn't make much sense here.">.</error> [],
    [] <error descr="Operation on an array doesn't make much sense here.">.</error> '...',
];